WRFPLUSV3-Chem branch commit.  Successfully compiles and runs using configure option: Linux x86_64 i486 i586 i686, ifort compiler with icc  (dmpar)
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/WRFPLUSV3-Chem@7549 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

Former-commit-id: 9d772cd17ef51c60e8dec248ddaafb170fc2982d

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -198,7 +198,7 @@ MODULES = \
 	module_sf_pxlsm_tl.o \
 	module_sf_pxlsm_ad.o \
 	module_sf_slab_tl.o \
-	module_sf_slab_ad.o
+	module_sf_slab_ad.o \
 	module_wind_fitch.o \
         module_sf_lake.o \
 	module_diagnostics_driver.o
