Branch commit.  Debug snapshot.
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/jm_2015@8092 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/dyn_exp/Makefile
+++ b/dyn_exp/Makefile
@@ -25,3 +25,7 @@ include ../configure.wrf
 clean:
 	@ echo 'use the clean script'
 
+# DEPENDENCIES : only dependencies after this line (don't remove the word DEPENDENCIES)
+
+solve_exp.o:   module_exp.o
+
