--- a/share/Makefile
+++ b/share/Makefile
@@ -98,3 +98,8 @@ clean:
 	@ echo 'use the clean script'
 
 
+# DEPENDENCIES : only dependencies after this line (don't remove the word DEPENDENCIES)
+
+include ../main/depend.common
+
+# DO NOT DELETE
