Branch commit:  Reverted to tools/safe (whew!)
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/jm_bhwrf_to_trunk@8875 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/dyn_em/Makefile
+++ b/dyn_em/Makefile
@@ -64,3 +64,8 @@ cio.o :
 clean:
 	@ echo 'use the clean script'
 
+# DEPENDENCIES : only dependencies after this line (don't remove the word DEPENDENCIES)
+
+include depend.dyn_em
+
+# DO NOT DELETE
