--- a/main/Makefile.wrf
+++ b/main/Makefile.wrf
@@ -4,7 +4,7 @@ LN      =       ln -sf
 MAKE    =       make -i -r
 RM      =       rm -f
 
-MODULES =  atm_comp_mct.F module_wrf_top.F wrf_instance.F
+MODULES =  module_wrf_top.F
 
 OBJS    =
 
@@ -12,13 +12,13 @@ LIBPATHS =
 
 include ../configure.wrf
 
-$(SOLVER)_wrf : wrf.o atm_comp_mct.o
+$(SOLVER)_wrf : wrf.o ../main/module_wrf_top.o
 	$(RANLIB) $(LIBWRFLIB)
-	$(LD) -o wrf.exe $(LDFLAGS) wrf.o atm_comp_mct.o $(LIBWRFLIB) $(LIB)
+	$(LD) -o wrf.exe $(LDFLAGS) wrf.o ../main/module_wrf_top.o $(LIBWRFLIB) $(LIB)
 
-$(SOLVER)_wrf_SST_ESMF : wrf_ESMFMod.o wrf_SST_ESMF.o atm_comp_mct.o
+$(SOLVER)_wrf_SST_ESMF : wrf_ESMFMod.o wrf_SST_ESMF.o ../main/module_wrf_top.o
 	$(RANLIB) $(LIBWRFLIB)
-	$(LD) -o wrf_SST_ESMF.exe $(LDFLAGS) wrf_SST_ESMF.o wrf_ESMFMod.o atm_comp_mct.o $(LIBWRFLIB) $(LIB)
+	$(LD) -o wrf_SST_ESMF.exe $(LDFLAGS) wrf_SST_ESMF.o wrf_ESMFMod.o ../main/module_wrf_top.o $(LIBWRFLIB) $(LIB)
 
 $(SOLVER)_ideal : module_initialize ideal_$(SOLVER).o
 	$(RANLIB) $(LIBWRFLIB)
