second round of edits to upgrade of v3.7.1 in RASM
git-svn-id: https://svn-wrf-model.cgd.ucar.edu/branches/rasm_wrf@9322 b0b5d27b-6f0f-0410-a2a3-cb1e977edc3d

--- a/phys/Makefile
+++ b/phys/Makefile
@@ -111,6 +111,7 @@ MODULES = \
 	module_sf_slab.o  \
 	module_sf_noahdrv.o  \
 	module_sf_noahlsm.o  \
+	module_sf_clm.o  \
         module_sf_ssib.o  \
 	module_sf_noah_seaice.o \
 	module_sf_noah_seaice_drv.o \
