--- a/phys/Makefile.cesm
+++ b/phys/Makefile.cesm
@@ -111,6 +111,7 @@ MODULES = \
 	module_sf_slab.o  \
 	module_sf_noahdrv.o  \
 	module_sf_noahlsm.o  \
+	module_sf_clm.o  \
         module_sf_ssib.o  \
 	module_sf_noah_seaice.o \
 	module_sf_noah_seaice_drv.o \
