Test/fix CI + update docs + use ssh for cloning (#1)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - WRF_COMMIT=$TRAVIS_COMMIT
     - WPS_COMMIT=wps-cmake
     - WATS_REPO=WRF-CMake/wats
-    - WATS_BRANCH=master
+    - WATS_BRANCH=wats-ci # TODO change to master
     - WATS_DATA_REPO=WRF-CMake/wats-data
     - WATS_MODE=wrf
 
@@ -68,7 +68,6 @@ jobs:
         - GRIB2=0
         - MODE=dm+sm
         - NESTING=basic
-        - IDEAL_CASE=ALL
 
     - stage: build
       os: osx
@@ -100,11 +99,9 @@ jobs:
 
     - stage: wats
       os: linux
-      git:
-        depth: 1 # ideally we'd like to disable cloning completely
       before_install: skip
       install:
-        - git clone --depth=1 --branch=$WATS_BRANCH git@github.com:$WATS_REPO.git wats
+        - git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
       script:
         - wats/.ci/travis/trigger-wats-travis.sh
         - wats/.ci/travis/trigger-wats-appveyor.sh
@@ -119,8 +116,8 @@ script: skip
 
 before_deploy:
   - cd ..
-  - git clone --depth=100 --no-single-branch git@github.com:$WPS_REPO.git WPS
-  - git clone --depth=1 --branch=$WATS_BRANCH git@github.com:$WATS_REPO.git wats
+  - git clone --depth=100 --no-single-branch https://github.com/$WPS_REPO.git WPS
+  - git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
   - cd WPS
   - git checkout $WPS_COMMIT
   - .ci/travis/install-wps.sh
@@ -130,9 +127,12 @@ before_deploy:
   - python wats/wats/main.py run --mode $WATS_MODE --wrf-dir WRF --wps-dir WPS --work-dir wats_work $MPI_FLAG
 
 deploy:
-  provider: script
-  skip_cleanup: true
+  provider: pages
+  github-token: $GITHUB_TOKEN
+  skip-cleanup: true
+  local-dir: ../wats_work/output
+  repo: $WATS_DATA_REPO
+  target-branch: $TRAVIS_REPO_SLUG-$TRAVIS_BUILD_NUMBER-$MODE
   on:
     all_branches: true
     condition: $SYSTEM = make
-  script: bash wats/.ci/travis/deploy-wats-data.sh wats_work/output
