change WATS branch to use master

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - WRF_COMMIT=$TRAVIS_COMMIT
     - WPS_COMMIT=wps-cmake
     - WATS_REPO=WRF-CMake/wats
-    - WATS_BRANCH=wats-ci # TODO change to master
+    - WATS_BRANCH=master
     - WATS_DATA_REPO=WRF-CMake/wats-data
     - WATS_MODE=wrf
 
