switch to Debug builds on appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,13 +6,13 @@ clone_depth: 50
 
 environment:
   matrix:
-    - BUILD_TYPE: Release
+    - BUILD_TYPE: Debug
       MODE: serial
       NESTING: basic
       GRIB1: 0
       GRIB2: 1
       
-    - BUILD_TYPE: Release
+    - BUILD_TYPE: Debug
       MODE: dmpar
       NESTING: basic
       GRIB1: 0
