--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,10 +22,12 @@ environment:
 
 install:
   - call .ci\appveyor\setup-dependencies.bat
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 build_script:
   - call .ci\appveyor\install-wrf.bat
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 artifacts:
   - path: build/install
