--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ endif()
 
 set(ARCH_CUSTOM "" CACHE STRING "Name of custom architecture configuration to use")
 option(OPTIMIZE_C "Optimize C code even in Debug mode" ON)
-option(DISABLE_RUNTIME_CHECKS "Disable compiler runtime checks in Release mode" OFF)
+option(ENABLE_RUNTIME_CHECKS "Enable compiler runtime checks in Release mode" OFF)
 option(DEBUG_ARCH "Print arch files debug information" OFF)
 option(DEBUG_GLOBAL_DEFINITIONS "Print global preprocessor definitions applied to all source files" OFF)
 option(DEBUG_FEATURE_TESTS "Print debug information while running compiler feature tests" OFF)
@@ -166,7 +166,7 @@ if (OPTIMIZE_C)
     set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${C_optimized}")
 endif()
 
-if (NOT DISABLE_RUNTIME_CHECKS)
+if (ENABLE_RUNTIME_CHECKS)
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${C_checked}")
     set(CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS_RELEASE} ${Fortran_checked}")
 endif()
