--- a/.travis.yml
+++ b/.travis.yml
@@ -139,6 +139,7 @@ install:
 script: skip
 
 before_deploy:
+  - .ci/travis/install-python3.sh
   - cd ..
   - git clone --depth=100 --no-single-branch https://github.com/$WPS_REPO.git WPS
   - git clone --depth=1 --branch=$WATS_BRANCH https://github.com/$WATS_REPO.git wats
