skip WATS trigger if pull request build in Travis CI [skip ci]
For PRs originating from the source repository (= not forks) there is
still a Travis CI build for the branch which will set the necessary checks
for PRs. External PRs are unsupported due to lack of access to secrets
for pushing artifacts etc.

--- a/.travis.yml
+++ b/.travis.yml
@@ -122,6 +122,9 @@ jobs:
         - NESTING=basic
 
     - stage: wats
+      # Currently, WATS is only supported for branch builds since
+      # pull requests (from forks) cannot access the necessary secrets.
+      if: type != pull_request
       os: linux
       before_install: skip
       install:
