--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,28 @@
 # https://aka.ms/yaml
 
 trigger:
-- letmaik/azurepipelines
+- wrf-cmake
 
-pool:
-  vmImage: 'Ubuntu-16.04'
+jobs:
+- job: Windows
+  pool:
+    vmImage: vs2017-win2016
+  steps:
+  - script: echo "##vso[task.setvariable variable=SYSTEM]make"
+  - template: .ci/azure/windows.yml
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- job: Ubuntu
+  pool:
+    vmImage: ubuntu-16.04
+  steps:
+  - script: echo "##vso[task.setvariable variable=OS_NAME]linux"
+  - script: echo "##vso[task.setvariable variable=SYSTEM]make"
+  - template: ci/azure/ubuntu.yml
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- job: macOS
+  pool:
+    vmImage: macos-10.13
+  steps:
+  - script: echo "##vso[task.setvariable variable=OS_NAME]osx"
+  - script: echo "##vso[task.setvariable variable=SYSTEM]make"
+  - template: ci/azure/macos.yml
