--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ trigger:
 - wrf-cmake
 
 jobs:
-- job: Windows (Make)
+- job: windows_make
+  displayName: Windows (Make)
   pool:
     vmImage: vs2017-win2016
   steps:
@@ -17,7 +18,8 @@ jobs:
       echo ##vso[task.setvariable variable=MODE]serial
   - template: .ci/azure/windows.yml
 
-- job: Ubuntu (Make)
+- job: ubuntu_make
+  displayName: Ubuntu (Make)
   pool:
     vmImage: ubuntu-16.04
   steps:
@@ -30,7 +32,8 @@ jobs:
       echo ##vso[task.setvariable variable=MODE]serial
   - template: .ci/azure/ubuntu.yml
 
-- job: macOS (Make)
+- job: macos_make
+  displayName: macOS (Make)
   pool:
     vmImage: macos-10.13
   steps:
