--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,9 @@ jobs:
     vmImage: vs2017-win2016
   steps:
   - script: |
-      echo ##vso[task.setvariable variable=SYSTEM]make
-      echo ##vso[task.setvariable variable=BUILD_TYPE]Debug
-      echo ##vso[task.setvariable variable=MODE]serial
+      echo "##vso[task.setvariable variable=SYSTEM]make"
+      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
+      echo "##vso[task.setvariable variable=MODE]serial"
   - template: .ci/azure/windows.yml
 
 - job: ubuntu_make
@@ -24,12 +24,12 @@ jobs:
     vmImage: ubuntu-16.04
   steps:
   - script: |
-      echo ##vso[task.setvariable variable=OS_NAME]linux
-      echo ##vso[task.setvariable variable=SYSTEM]make
-      echo ##vso[task.setvariable variable=BUILD_TYPE]Debug
-      echo ##vso[task.setvariable variable=CC]gcc
-      echo ##vso[task.setvariable variable=FC]gfortran
-      echo ##vso[task.setvariable variable=MODE]serial
+      echo "##vso[task.setvariable variable=OS_NAME]linux"
+      echo "##vso[task.setvariable variable=SYSTEM]make"
+      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
+      echo "##vso[task.setvariable variable=CC]gcc"
+      echo "##vso[task.setvariable variable=FC]gfortran"
+      echo "##vso[task.setvariable variable=MODE]serial"
   - template: .ci/azure/ubuntu.yml
 
 - job: macos_make
@@ -38,10 +38,10 @@ jobs:
     vmImage: macos-10.13
   steps:
   - script: |
-      echo ##vso[task.setvariable variable=OS_NAME]osx
-      echo ##vso[task.setvariable variable=SYSTEM]make
-      echo ##vso[task.setvariable variable=BUILD_TYPE]Debug
-      echo ##vso[task.setvariable variable=CC]gcc-8
-      echo ##vso[task.setvariable variable=FC]gfortran-8
-      echo ##vso[task.setvariable variable=MODE]serial
+      echo "##vso[task.setvariable variable=OS_NAME]osx"
+      echo "##vso[task.setvariable variable=SYSTEM]make"
+      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
+      echo "##vso[task.setvariable variable=CC]gcc-8"
+      echo "##vso[task.setvariable variable=FC]gfortran-8"
+      echo "##vso[task.setvariable variable=MODE]serial"
   - template: .ci/azure/macOS.yml
