--- a/.ci/azure/ubuntu.yml
+++ b/.ci/azure/ubuntu.yml
@@ -2,3 +2,6 @@ steps:
 - script: printenv
 - script: .ci/azure/scripts/setup-dependencies.sh
 - script: .ci/azure/scripts/install-wrf.sh
+- script: |
+    cat tools/nc4_test.log
+  condition: failed()
