--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,8 @@ jobs:
       echo "##vso[task.setvariable variable=NESTING]basic"
   - template: .ci/azure/windows.yml
 
+# TODO CC/FC are not used for Make builds
+
 - job: ubuntu_make
   displayName: Ubuntu (Make)
   pool:
