--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - wrf-cmake
 
@@ -46,7 +41,7 @@ jobs:
       echo "##vso[task.setvariable variable=CC]gcc"
       echo "##vso[task.setvariable variable=FC]gfortran"
       echo "##vso[task.setvariable variable=MODE]serial"
-  - template: .ci/azure/ubuntu.yml
+  - template: .ci/azure/unix.yml
 
 - job: ubuntu_cmake
   displayName: Ubuntu (CMake)
@@ -63,7 +58,7 @@ jobs:
       echo "##vso[task.setvariable variable=GRIB1]0"
       echo "##vso[task.setvariable variable=GRIB2]1"
       echo "##vso[task.setvariable variable=NESTING]basic"
-  - template: .ci/azure/ubuntu.yml
+  - template: .ci/azure/unix.yml
 
 - job: macos_make
   displayName: macOS (Make)
@@ -77,7 +72,7 @@ jobs:
       echo "##vso[task.setvariable variable=CC]gcc-8"
       echo "##vso[task.setvariable variable=FC]gfortran-8"
       echo "##vso[task.setvariable variable=MODE]serial"
-  - template: .ci/azure/macOS.yml
+  - template: .ci/azure/unix.yml
 
 - job: macos_cmake
   displayName: macOS (CMake)
@@ -94,4 +89,4 @@ jobs:
       echo "##vso[task.setvariable variable=GRIB1]0"
       echo "##vso[task.setvariable variable=GRIB2]1"
       echo "##vso[task.setvariable variable=NESTING]basic"
-  - template: .ci/azure/macOS.yml
+  - template: .ci/azure/unix.yml
