--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,25 +6,25 @@ jobs:
   displayName: Windows (Make)
   pool:
     vmImage: vs2017-win2016
+  parameters:
+    SYSTEM: make
+    BUILD_TYPE: Debug
+    MODE: serial
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=SYSTEM]make"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=MODE]serial"
   - template: .ci/azure/windows.yml
 
 - job: windows_cmake
   displayName: Windows (CMake)
   pool:
     vmImage: vs2017-win2016
+  parameters:
+    SYSTEM: cmake
+    BUILD_TYPE: Debug
+    MODE: serial
+    GRIB1: 0
+    GRIB2: 1
+    NESTING: basic
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=SYSTEM]cmake"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=MODE]serial"
-      echo "##vso[task.setvariable variable=GRIB1]0"
-      echo "##vso[task.setvariable variable=GRIB2]1"
-      echo "##vso[task.setvariable variable=NESTING]basic"
   - template: .ci/azure/windows.yml
 
 # TODO CC/FC are not used for Make builds
@@ -33,60 +33,60 @@ jobs:
   displayName: Ubuntu (Make)
   pool:
     vmImage: ubuntu-16.04
+  parameters:
+    OS_NAME: linux
+    SYSTEM: make
+    BUILD_TYPE: Debug
+    CC: gcc
+    FC: gfortran
+    MODE: serial
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=OS_NAME]linux"
-      echo "##vso[task.setvariable variable=SYSTEM]make"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=CC]gcc"
-      echo "##vso[task.setvariable variable=FC]gfortran"
-      echo "##vso[task.setvariable variable=MODE]serial"
-  - template: .ci/azure/unix.yml
+  - template: .ci/azure/ubuntu.yml
 
 - job: ubuntu_cmake
   displayName: Ubuntu (CMake)
   pool:
     vmImage: ubuntu-16.04
+  parameters:
+    OS_NAME: linux
+    SYSTEM: cmake
+    BUILD_TYPE: Debug
+    CC: gcc
+    FC: gfortran
+    MODE: serial
+    GRIB1: 0
+    GRIB2: 1
+    NESTING: basic
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=OS_NAME]linux"
-      echo "##vso[task.setvariable variable=SYSTEM]cmake"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=CC]gcc"
-      echo "##vso[task.setvariable variable=FC]gfortran"
-      echo "##vso[task.setvariable variable=MODE]serial"
-      echo "##vso[task.setvariable variable=GRIB1]0"
-      echo "##vso[task.setvariable variable=GRIB2]1"
-      echo "##vso[task.setvariable variable=NESTING]basic"
-  - template: .ci/azure/unix.yml
+  - template: .ci/azure/ubuntu.yml
 
 - job: macos_make
   displayName: macOS (Make)
   pool:
     vmImage: macos-10.13
+  parameters:
+    OS_NAME: osx
+    SYSTEM: make
+    BUILD_TYPE: Debug
+    CC: gcc-8
+    FC: gfortran-8
+    MODE: serial
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=OS_NAME]osx"
-      echo "##vso[task.setvariable variable=SYSTEM]make"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=CC]gcc-8"
-      echo "##vso[task.setvariable variable=FC]gfortran-8"
-      echo "##vso[task.setvariable variable=MODE]serial"
-  - template: .ci/azure/unix.yml
+  - template: .ci/azure/macos.yml
 
 - job: macos_cmake
   displayName: macOS (CMake)
   pool:
     vmImage: macos-10.13
+  parameters:
+    OS_NAME: osx
+    SYSTEM: cmake
+    BUILD_TYPE: Debug
+    CC: gcc-8
+    FC: gfortran-8
+    MODE: serial
+    GRIB1: 0
+    GRIB2: 1
+    NESTING: basic
   steps:
-  - script: |
-      echo "##vso[task.setvariable variable=OS_NAME]osx"
-      echo "##vso[task.setvariable variable=SYSTEM]cmake"
-      echo "##vso[task.setvariable variable=BUILD_TYPE]Debug"
-      echo "##vso[task.setvariable variable=CC]gcc-8"
-      echo "##vso[task.setvariable variable=FC]gfortran-8"
-      echo "##vso[task.setvariable variable=MODE]serial"
-      echo "##vso[task.setvariable variable=GRIB1]0"
-      echo "##vso[task.setvariable variable=GRIB2]1"
-      echo "##vso[task.setvariable variable=NESTING]basic"
-  - template: .ci/azure/unix.yml
+  - template: .ci/azure/macos.yml
